# Film.cam

./: .gitignore  PrivacyPolicy.txt  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle  version.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/filmcam/: metadata.json
app/src/main/assets/shaders/: bayermoire.glsl  histogram.glsl  initial.glsl  tofloat.glsl
app/src/main/assets/shaders/alignment/: align.glsl  normalizebl.glsl
app/src/main/assets/shaders/autoexposure/: apply.glsl
app/src/main/assets/shaders/demosaic/: demosaicp0ig.glsl  demosaicp12b.glsl  demosaicp12ec.glsl  demosaicp12f.glsl  demosaicp2ec.glsl
app/src/main/assets/shaders/ltm/: exposebayer3.glsl  fusionbayer2.glsl
app/src/main/assets/shaders/merge/: averageff.glsl  hotpixeldetect.glsl  medianfilterhotpixeltoraw.glsl  merge0.glsl  merge11.glsl  merge12.glsl  merge1b.glsl  merge2.glsl  merge2o.glsl
app/src/main/assets/shaders/preview/: main_vs.glsl
app/src/main/assets/shaders/utils/: gaussdown.glsl  pyramiddiff.glsl
app/src/main/cpp/: dngCreator.cpp  flacRecorder.cpp
app/src/main/res/color/: gradient_color_video.xml
app/src/main/res/drawable/: fps_button.xml  gallery_launch_bg.xml  gallery_launch_fg.xml  gallery_launch_mono.xml  gradient_vector_video.xml  ic_settings.xml
app/src/main/res/layout/: camera_fragment.xml  fragment_gallery_image_library.xml  fragment_gallery_image_viewer.xml
app/src/main/res/layout-land/: fragment_gallery_image_viewer.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: preference_keys.xml  strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko-rKR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: preferences.xml
circularbarlib/: build.gradle
mood-camera-alt/: PROJECT_STRUCTURE.md  README.md  build.gradle
mood-camera-alt/app/: SupportedList.txt  build.gradle  proguard-rules.pro  version.properties
mood-camera-alt/app/src/main/: AndroidManifest.xml
mood-camera-alt/app/src/main/cpp/: CMakeLists.txt  allocator.cpp  dngCreator.h  native-engine.cpp
(+297 files in other folders)
